upload download handlers go fmt logger fix
